# Templates

./: README.md  fordir.sh  tmp.sh
.bac/: README.md
.bac/nextjs/: package-lock.json
AstroJS/: README.md  tailwind.config.cjs  update.sh
Django/Django/: settings.py
Flutter-App/: README.md  pubspec.yaml
Flutter-App/lib/: main.dart
Full-Stack-Rust-App/: README.md
Proxy-ElectronJS/Template-Proxy-ElectronJs/: preload.js
TailwindCSS-Next-App/create-tailwindcss-next-app/: index.js
TailwindCSS-Next-App/src/: tsconfig.json
Template-AstroJS/: .alexignore  .alexrc.cjs  .editorconfig  .gitignore  astro.config.mjs  package-lock.json  package.json
Template-Flutter-App/lib/: responsive.dart
Template-Flutter-App/linux/: CMakeLists.txt  my_application.cc
Template-Flutter-App/test/: widget_test.dart
Template-Flutter-App/web/: index.html  manifest.json
Template-Flutter-App/windows/: CMakeLists.txt
Template-Proxy-ElectronJs/Template-Proxy-ElectronJs/: .prettierrc  main.js  package-lock.json  package.json
Template-TailWindCSS-Next-App/: README.md
Template-TailWindCSS-Next-App/create-tailwindcss-next-app/: .gitignore  package-lock.json  (+2 more)
Yew-App/: .gitattributes
nextjs/: .editorconfig  .gitignore  .prettierignore  .prettierignore_staged  Dockerfile  alex.config.js  jest.config.js  next.config.js  package-lock.json  package.json  package.json.bac  prettier.config.js  tailwind.config.js  tsconfig.json  turbo.json
python-package-template/: README.md  cookiecutter.json
yew-app-template/: Cargo.toml  package.json
yew-app-template/static/: tailwind.css
(+55 files in other folders)
