[package]
authors = ["Thamognya Kodi <contact@thamognya.com>"]
categories = ["wasm"]
description = "My awesome Yew app."
edition = "2018"
license = "AGPL-3.0-or-later"
name = "yew-app"
readme = "./README.md"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = ">=0.4"
serde = ">=1"
reqwest = { version = ">=0.11", features = ["json"] }
yew = ">=0.19.3"
yew-router = ">=0.16.0"
yew-hooks = ">=0.1.56"
wasm-bindgen = ">=0.2"
wasm-logger = ">=0.2.0"
wee_alloc = ">=0.4.5"

[dev-dependencies]
wasm-bindgen-test = ">=0.3.14"
gloo-utils = ">=0.1.0"

[dev-dependencies.web-sys]
version = ">=0.3"
features = [
  "Document",
  "Element",
  "HtmlCollection",
]
